# uk-housing-affordability

./: .gitignore  README.md  pyproject.toml
notebooks/: hpi-data-exploration.ipynb  hpi-exploration.ipynb
scripts/: get_latest_hpi_file.py
