[project]
name = "uk-housing-affordability"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.0",
    "duckdb-engine>=0.17.0",
    "ipykernel>=7.2.0",
    "jupysql>=0.11.1",
    "pandas>=3.0.1",
    "seaborn>=0.13.2",
    "toml>=0.10.2",
]
